--- a/captioner/templates/home.html
+++ b/captioner/templates/home.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>captioner</title>
-		<style>body { max-width: 600px; margin: auto } td { width: 5em }</style>
+		<style>body { max-width: 40em; margin: auto; font-size: 150% } td { width: 5em }</style>
 	</head>
 	<body>
 		<!-- maybe if you ask Blaine nicely you can see the source code -->
