Align numbers to right.

--- a/captioner/templates/home.html
+++ b/captioner/templates/home.html
@@ -42,11 +42,11 @@
 		<table>
 			<tr>
 				<td>Images</td>
-				<td>{{ image_count }}</td>
+				<td style="text-align: right;">{{ image_count }}</td>
 			</tr>
 			<tr>
 				<td>Captions</td>
-				<td>{{ caption_count }}</td>
+				<td style="text-align: right;">{{ caption_count }}</td>
 			</tr>
 		</table>
 
